[project]
name = "llm-tutorials"
version = "0.1.0"
description = ""
authors = [{ name = "Sajal Sharma", email = "sajal2692@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = ["langchain-community>=0.2.6,<0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
