[tool.poetry]
name = "adaptive-rag-with-langgraph"
version = "1.0.0"
description = "Simple implementation of adaptive RAG using LangGraph."
authors = ["Sajal Sharma <sajal2692@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.6"
langgraph = "^0.1.5"
langchain-openai = "^0.1.14"
chromadb = "^0.5.3"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
