[tool.poetry]
name = "query-routing-with-langgraph"
version = "1.0.0"
description = "Short tutorial on query routing using langgraph."
authors = ["Sajal Sharma <sajal2692@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
langchain-community = "^0.2.6"
langchain-openai = "^0.1.14"
langgraph = "^0.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
